--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_input_search_control.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_input_search_control.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/sceyt_color_background">
+    android:background="@color/sceyt_color_background"
+    android:clickable="true"
+    android:focusable="true">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icUp"
