--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
@@ -121,14 +121,39 @@
             tools:itemCount="3"
             tools:listitem="@layout/sceyt_item_poll_option" />
 
+        <com.sceyt.chatuikit.presentation.custom_views.DecoratedTextView
+            android:id="@+id/messageDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:includeFontPadding="false"
+            android:paddingStart="0dp"
+            android:paddingEnd="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+            app:layout_constraintTop_toBottomOf="@+id/rvPollOptions"
+            app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
+            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
+            app:sceytUiDecoratedTextTrailingIconPadding="5dp"
+            app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
+            tools:sceytUiDecoratedTextTitle="00:37"
+            tools:sceytUiDecoratedTextTrailingIcon="@drawable/sceyt_ic_status_delivered" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/messageDate"/>
+
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="7dp"
             android:background="@color/sceyt_color_background"
-            app:layout_constraintTop_toBottomOf="@+id/rvPollOptions" />
+            app:layout_constraintTop_toBottomOf="@+id/messageDate" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvViewResults"
@@ -144,26 +169,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider" />
-
-        <com.sceyt.chatuikit.presentation.custom_views.DecoratedTextView
-            android:id="@+id/messageDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:includeFontPadding="false"
-            android:paddingStart="0dp"
-            android:paddingEnd="5dp"
-            app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
-            app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-            app:layout_constraintTop_toBottomOf="@+id/tvViewResults"
-            app:layout_goneMarginTop="15dp"
-            app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
-            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
-            app:sceytUiDecoratedTextTrailingIconPadding="5dp"
-            app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
-            tools:sceytUiDecoratedTextTitle="00:37"
-            tools:sceytUiDecoratedTextTrailingIcon="@drawable/sceyt_ic_status_delivered" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
