--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
@@ -5,8 +5,7 @@
     android:id="@+id/layoutOptionContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
-    android:paddingVertical="14dp">
+    android:layout_marginVertical="6dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvOptionName"
