- Update poll progress bar animation interpolator to `OvershootInterpolator`. - Adjust constraints in poll result option layout.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
@@ -42,8 +42,10 @@
         android:nestedScrollingEnabled="false"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/btnShowAll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvOptionName"
+        app:layout_goneMarginBottom="6dp"
         tools:itemCount="3"
         tools:listitem="@layout/sceyt_item_voter" />
 
@@ -57,6 +59,7 @@
         android:text="@string/sceyt_show_all"
         android:textAllCaps="false"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvVoters"
