--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_voter.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_voter.xml
@@ -17,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
         tools:src="@tools:sample/avatars" />
 
     <androidx.appcompat.widget.AppCompatTextView
