--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_unsupported_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_unsupported_message.xml
@@ -123,7 +123,7 @@
             android:text="@string/unsupported_message_text"
             android:textColor="@color/sceyt_color_text_secondary"
             android:textSize="@dimen/mediumTextSize"
-            android:textStyle="italic"
+            tools:textStyle="italic"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toStartOf="@+id/messageDate"
