- Add horizontal padding to the share channel link description.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_share_invite_qr.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_share_invite_qr.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:paddingHorizontal="20dp"
         android:text="@string/sceyt_share_channel_link_desc"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="13sp"
