--- a/SceytChatUiKit/src/main/res/values/plurals.xml
+++ b/SceytChatUiKit/src/main/res/values/plurals.xml
@@ -8,4 +8,31 @@
         <item quantity="many">%d votes</item>
         <item quantity="other">%d votes</item>
     </plurals>
+
+    <plurals name="sceyt_days">
+        <item quantity="zero">%d days</item>
+        <item quantity="one">%d day</item>
+        <item quantity="two">%d days</item>
+        <item quantity="few">%d days</item>
+        <item quantity="many">%d days</item>
+        <item quantity="other">%d days</item>
+    </plurals>
+
+    <plurals name="sceyt_weeks">
+        <item quantity="zero">%d weeks</item>
+        <item quantity="one">%d week</item>
+        <item quantity="two">%d weeks</item>
+        <item quantity="few">%d weeks</item>
+        <item quantity="many">%d weeks</item>
+        <item quantity="other">%d weeks</item>
+    </plurals>
+
+    <plurals name="sceyt_months">
+        <item quantity="zero">%d months</item>
+        <item quantity="one">%d month</item>
+        <item quantity="two">%d months</item>
+        <item quantity="few">%d months</item>
+        <item quantity="many">%d months</item>
+        <item quantity="other">%d months</item>
+    </plurals>
 </resources>
