- Replace `DeliveryStatus` with a new `MessageDeliveryStatus` enum that includes a `Failed` state. - Add a style attribute for the failed message status icon. - Add `isPending()` and `isNotPending()` extensions for `SceytMessage`.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_channels.xml
@@ -38,6 +38,8 @@
         <attr name="sceytUiChannelListStatusReceivedIndicator" format="reference" />
         <!-- Drawable of the message displayed state indicator -->
         <attr name="sceytUiChannelListStatusDisplayedIndicator" format="reference" />
+        <!-- Drawable of the message failed state indicator -->
+        <attr name="sceytUiChannelListStatusFailedIndicator" format="reference" />
 
         <!-- Drawable of the muted channel icon  -->
         <attr name="sceytUiChannelListMutedIcon" format="reference" />
