--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_self_destructed_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_self_destructed_message.xml
@@ -71,7 +71,7 @@
             tools:textStyle="italic"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
-            app:layout_constraintEnd_toStartOf="@+id/messageDate"
+            app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
