--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_self_destructed_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_self_destructed_message.xml
@@ -64,18 +64,18 @@
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
-            android:drawablePadding="8dp"
+            android:drawablePadding="6dp"
             android:text="@string/sceyt_message_self_destructed"
             android:textColor="@color/sceyt_color_text_secondary"
             android:textSize="@dimen/mediumTextSize"
-            tools:textStyle="italic"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
-            tools:text="@string/sceyt_message_self_destructed" />
+            tools:text="@string/sceyt_message_self_destructed"
+            tools:textStyle="italic" />
 
         <com.sceyt.chatuikit.presentation.custom_views.DecoratedTextView
             android:id="@+id/messageDate"
