add option for enable(disable) sending viewOnce messages

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message_input_view.xml
@@ -37,6 +37,7 @@
         <attr name="sceytUiMessageInputEnableSendAttachment" format="boolean" />
         <attr name="sceytUiMessageInputEnableMention" format="boolean" />
         <attr name="sceytUiMessageInputEnableTextStyling" format="boolean" />
+        <attr name="sceytUiMessageInputEnableSendViewOnceMessage" format="boolean" />
 
         <attr name="sceytUiMessageInputSendIconBackgroundColor" format="reference|color" />
 
