--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_view_once_selected_with_layers.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_view_once_selected_with_layers.xml
@@ -1,10 +1,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/backgroundLayer">
-        <shape android:shape="oval">
-            <solid android:color="@color/sceyt_color_accent" />
-        </shape>
-
-    </item>
+    <item
+        android:id="@+id/backgroundLayer"
+        android:drawable="@drawable/sceyt_ic_view_once_selected_bg" />
 
     <item android:drawable="@drawable/sceyt_ic_view_once_selected" />
+
 </layer-list>
